crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__empty.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 3,
        },
    },
    value: Record {
        fields: [],
        grouped: false,
    },
}
