crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__error_missing_equals.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ x 1 }"
info: diagnostic
---
nash::syntax

  × Expected `=` after the field name.
   ╭─[src/Main.nash:1:5]
 1 │ { x 1 }
   ·     ─
   ╰────
  help: Write `name = value` for a record field.
