crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__error_missing_value.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ x = }"
info: diagnostic
---
nash::syntax

  × Expected an expression before the closing delimiter.
   ╭─[src/Main.nash:1:7]
 1 │ { x = }
   ·       ─
   ╰────
  help: Add the missing expression, or remove a trailing comma.
