crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__error_trailing_comma.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ x = 1, }"
info: diagnostic
---
nash::syntax

  × Trailing comma in record.
   ╭─[src/Main.nash:1:10]
 1 │ { x = 1, }
   ·          ─
   ╰────
  help: Remove the comma before `}`.
