crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__error_unclosed.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ x = 1"
info: diagnostic
---
nash::syntax::unclosed_delimiter

  × Expected `}` to close `{`.
   ╭─[src/Main.nash:1:8]
 1 │ { x = 1
   · ┬      ┬
   · │      ╰── expected `}`
   · ╰── opened here
   ╰────
  help: Add `}` here.
