crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__error_uppercase_field.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ X = 1 }"
info: diagnostic
---
nash::syntax

  × Expected a record field.
   ╭─[src/Main.nash:1:3]
 1 │ { X = 1 }
   ·   ─
   ╰────
  help: Write `name = value`; separate fields with commas.
