crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__two_fields.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{ x = 1, y = 2 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: Record {
        fields: [
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: "x",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 7,
                        },
                        end: Position {
                            line: 1,
                            column: 8,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 10,
                        },
                        end: Position {
                            line: 1,
                            column: 11,
                        },
                    },
                    value: "y",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 14,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    value: Int(
                        2,
                    ),
                },
            },
        ],
        grouped: false,
    },
}
