crates/nash-parse/src/expression/snapshots/nash_parse__expression__record__tests__with_comments.snap
---
source: crates/nash-parse/src/expression/record.rs
description: "Code:\n\n{\n    x = 1, -- first field\n    y = 2  -- second field\n}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 4,
            column: 2,
        },
    },
    value: Record {
        fields: [
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 6,
                        },
                    },
                    value: "x",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 9,
                        },
                        end: Position {
                            line: 2,
                            column: 10,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 5,
                        },
                        end: Position {
                            line: 3,
                            column: 6,
                        },
                    },
                    value: "y",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 9,
                        },
                        end: Position {
                            line: 3,
                            column: 10,
                        },
                    },
                    value: Int(
                        2,
                    ),
                },
            },
        ],
        grouped: false,
    },
}
